ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mockbin.org
    http:
      paths:
      - path: /requests
        pathType: Prefix
        backend:
          service:
            name: my-external-service
            port: 
              number: 80
  defaultBackend:
    service:
      name: my-external-service
      port:
        number: 80
